...
                android:textColor="@color/lavender" />

            <!-- Email Input Field -->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_email"
                android:background="@drawable/custom_edittext_border"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black" />
...
